Update name. Update 'about' text in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!--mudar nome-->
-    <title>Café Santos | Restaurante | Cervejaria | Lisboa</title>
+    <title>Café Régio | Restaurante | Cervejaria | Lisboa</title>
     <script src="javascript.js"></script>
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -27,7 +27,7 @@
           <div class="img-container">
             <img src="./images/pexels-photo-260922.jpg" style="width:100%" alt="salão-principal">               
             <!--mudar nome-->
-            <div class="nomecafe">CAFÉ SANTOS</div>
+            <div class="nomecafe">CAFÉ RÉGIO</div>
           </div>
         </div>
       
@@ -40,17 +40,31 @@
       <section class="sobre" id="sobre">
         <div class="img-container">
           <div class="frame">
-            <img src="./images/about-picture.jpeg" alt="bela pota">
+            <img src="./images/about-picture.jpeg" alt="foto-esplanada">
           </div>
         </div>
         <div class="text">
           <div class="subtitle">Sobre Nós</div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ex massa, viverra sodales cursus a, aliquet id leo. Pellentesque eget augue sed massa sagittis tincidunt nec vel nisi. Morbi eget ultrices tellus. Nunc nec sagittis nibh. Phasellus luctus ut sapien vitae lacinia. Aenean ac augue eu velit sodales molestie sed sed diam. Cras iaculis purus non nunc efficitur mollis. Sed ac tellus urna. Aliquam urna sem, varius ut erat efficitur, egestas auctor tellus. Ut hendrerit, massa a pulvinar molestie, enim mi egestas velit, ac dignissim metus felis id enim. Fusce vestibulum felis vitae arcu dapibus, eget sagittis magna mollis. Pellentesque et enim leo. Quisque hendrerit iaculis orci, at scelerisque mauris accumsan nec. Etiam massa odio, blandit id felis eget, laoreet pellentesque nibh. Morbi ullamcorper elit massa, vel rutrum erat feugiat sed.
-            <br><br>
-            Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla a massa sodales, pulvinar lacus eu, sollicitudin ligula. Maecenas in euismod dui. Morbi mollis, quam quis feugiat tincidunt, nibh justo pretium purus, sed egestas eros tellus et metus. Phasellus semper sapien nec augue rutrum tristique. Proin non arcu non nulla facilisis consequat. Praesent eu lectus sollicitudin, suscipit ante ut, elementum eros. Vivamus eu volutpat elit, facilisis auctor odio. Phasellus nisi lectus, ullamcorper a tempor ut, volutpat sed nunc. Etiam id malesuada nulla, mattis feugiat elit. Duis vulputate sapien vitae ante scelerisque hendrerit. Suspendisse lacinia scelerisque dolor, at condimentum turpis congue in. Ut id ex nec magna luctus iaculis eget consequat odio. Integer justo quam, pellentesque sit amet massa et, venenatis condimentum nisi. Mauris placerat ex id nisl imperdiet, id faucibus orci lacinia.
-            <br><br>
-            Curabitur quis posuere elit. Proin finibus enim sapien, sit amet lobortis ante blandit vitae. Suspendisse tortor felis, finibus ac feugiat eu, vehicula eu tortor. Suspendisse et velit ut justo ornare aliquet. Aliquam erat volutpat. 
+            O Café Régio nasceu um dia,
+            <br>
+            <br>
+            quando o povo mal bulia,
+            <br>
+            <br>
+            e a cerveja a noite prolongava,
+            <br>
+            <br>
+            na esplanada de um terreiro,
+            <br>
+            <br>
+            no peito dum cervejeiro
+            <br>
+            <br>
+            que, estando feliz, fermentava,
+            <br>
+            <br>
+            que, estando feliz, fermentava.
           </p>
         </div>
       </section>
@@ -59,7 +73,7 @@
     <footer>
       <section class= "contactos" id="contactos">
         <!--mudar nome-->
-        <h3 class="subtitle">Café Santos</h3>
+        <h3 class="subtitle">Café Régio</h3>
         <p>contactos e horários aqui</p>
         <p><a href="#nav">Voltar ao topo</a></p>
       </section>
