--- a/pages/menu/menu.html
+++ b/pages/menu/menu.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--mudar nome-->
-    <title>Menu | Café Santos</title>
+    <title>Menu | Café Régio</title>
     <link rel="stylesheet" href="styles.css">
   </head>
 
@@ -107,8 +106,7 @@
 
     <footer>
       <section class= "contactos" id="contactos">
-        <!--mudar nome-->
-        <h3 class="subtitle">Café Santos</h3>
+        <h3 class="subtitle">Café Régio</h3>
         <p>contactos e horários aqui</p>
         <p><a href="#nav">Voltar ao topo</a></p>
       </section>
